| Summary: | ASTERISK-29439: func_volume: Volume function can't be read | ||
| Reporter: | N A (InterLinked) | Labels: | patch |
| Date Opened: | 2021-05-20 08:13:20 | Date Closed: | 2021-05-26 11:19:03 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Functions/func_volume |
| Versions: | 18.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) volume.diff | |
| Description: | Up until now, the VOLUME function has been missing a read function, so its value can be written to only and not read afterwards. Not a huge deal, but this ability is useful for checking the current volume values if needed for adjustments.
Attached patch addresses this shortcoming by adding a read function, which can read TX/RX values. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-05-20 08:13:21.017-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-05-26 11:19:03.989-0500 Change 15898 merged by Friendly Automation: func_volume: Add read capability to function. [https://gerrit.asterisk.org/c/asterisk/+/15898|https://gerrit.asterisk.org/c/asterisk/+/15898] By: Friendly Automation (friendly-automation) 2021-05-26 11:25:09.919-0500 Change 15916 merged by George Joseph: func_volume: Add read capability to function. [https://gerrit.asterisk.org/c/asterisk/+/15916|https://gerrit.asterisk.org/c/asterisk/+/15916] By: Friendly Automation (friendly-automation) 2021-05-26 11:25:26.054-0500 Change 15915 merged by George Joseph: func_volume: Add read capability to function. [https://gerrit.asterisk.org/c/asterisk/+/15915|https://gerrit.asterisk.org/c/asterisk/+/15915] | ||